# embedded-aim-motor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  devenv.nix  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
examples/drive/: Cargo.toml
examples/drive/src/: main.rs
examples/parameters/: Cargo.toml
examples/parameters/src/: main.rs
examples/set-baud/: Cargo.toml
examples/set-baud/.cargo/: config.toml
examples/set-baud/src/: main.rs
src/: error.rs  lib.rs  types.rs
src/motor/: mod.rs  parameters.rs
