[package]
name = "embedded-aim-motor"
description = "Modbus RTU interface library for AIM series motors (e.g. 57AIM30) for embedded Rust."
version = "0.2.0"
edition = "2024"
license-file = "LICENSE.txt"
homepage = "https://github.com/DanNixon/embedded-aim-motor"
repository = "https://github.com/DanNixon/embedded-aim-motor"

[dependencies]
defmt = "1.0.1"
embassy-time = { version = "0.5.0", default-features = false }
embedded-io-async = "0.6.1"
modbus-core = { version = "0.1.1", default-features = false, features = ["rtu"] }
thiserror = { version = "2.0.16", default-features = false }

[lints.rust]
unused_crate_dependencies = "deny"
