[package]
name = "embedded-aim-motor-example-drive"
version = "0.0.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2024"

[[bin]]
name = "embedded-aim-motor-example-drive"
test = false
bench = false

[dependencies]
cortex-m-rt = "0.7.3"
defmt = "1.0"
defmt-rtt = "1.0"
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-futures = "0.1.2"
embassy-rp = { version = "0.8", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-aim-motor = { path = "../../" }
panic-probe = { version = "1.0", features = ["print-defmt"] }
portable-atomic = { version = "1.11", features = ["critical-section"] }
static_cell = "2.1.1"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
unused_crate_dependencies = "deny"
